# voxtype

./: .gitignore  Cargo.toml  README.md
src/: config.rs  dictation.rs  main.rs
